--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "my-job-server",
+  "name": "job-server",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start":"node ./server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
-    "consolidate": "^0.14.1",
     "express": "^4.14.0",
-    "jsonwebtoken": "^7.1.9"
+    "jsonwebtoken": "^7.1.9",
+    "mongoose": "^4.6.7"
   }
 }
