--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node ./server.js"
+    "start": "node ./server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
-    "mongoose": "^4.6.7"
+    "mongoose": "^4.6.7",
+    "password-hash": "^1.2.2"
   }
 }
